--- a/public/style.css
+++ b/public/style.css
@@ -1,502 +1,515 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  body {
-    background-color: #ececec;
-  }
+body {
+  background-color: #ececec;
+}
 
-  .menu-mobile {
-    display: none;
-  }
+.menu-mobile {
+  display: none;
+}
 
-  .menu-mobile-bottom {
-    display: none;
-  }
+.menu-mobile-bottom {
+  display: none;
+}
 
-  .allmenu {
-    display: flex;
-    height: 58px;
-    border: 1px solid #ccc;
-    justify-content: center;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    background-color: #FFFFFF;
-  }
+.allmenu {
+  display: flex;
+  height: 58px;
+  border: 1px solid #ccc;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  background-color: #ffffff;
+}
 
-  .menu {
-    width: 935px;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+.menu {
+  width: 935px;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .center {
-    display: flex;
-    justify-content: center;
-    margin-top: 34px;
-  }
+.center {
+  display: flex;
+  justify-content: center;
+  margin-top: 34px;
+}
 
-  .container {
-    width: 935px;
-    display: flex;
-    justify-content: space-between;
-    
-  }
+.container {
+  width: 935px;
+  display: flex;
+  justify-content: space-between;
+}
 
-  .timeline {
-    width: 612px;
-    height: 100%;
-    
-  }
+.timeline {
+  width: 612px;
+  height: 100%;
+}
 
-  .sidebar {
-    width: 300px;
-    font-family: 'Roboto', sans-serif;
-    position: fixed;
-    margin-left: 645px;
-  }
+.sidebar {
+  width: 300px;
+  font-family: "Roboto", sans-serif;
+  position: fixed;
+  margin-left: 645px;
+}
 
-  .logo-mobile {
-    display: none;
+.logo-mobile {
+  display: none;
 }
 
 .logo {
-    height: 54px;
-    width: 143px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  height: 54px;
+  width: 143px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .logo-text:hover {
-    cursor: pointer;
+  cursor: pointer;
+}
 
+.pencil {
+  display: flex;
+  margin-left: 17px;
+  font-size: 14px;
+  color: #8e8e8e;
+  margin-top: 2px;
+}
+
+.pencil ion-icon {
+  font-size: 14px;
+  margin-left: 5px;
 }
 
 .menu-itens {
-    height: 54px;
-    width: 140px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  height: 54px;
+  width: 140px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .spacer {
-    height: 22px;
-    width: 1px;
-    background-color: #DBDBDB;
+  height: 22px;
+  width: 1px;
+  background-color: #dbdbdb;
 }
 
 ion-icon {
-    font-size: 20px;
+  font-size: 20px;
 }
 
-ion-icon:hover, ion-icon:focus {
-    cursor: pointer;
-    transition: 0.3s ease;
-    color: lightgray;      
+ion-icon:hover,
+ion-icon:focus {
+  cursor: pointer;
+  transition: 0.3s ease;
+  color: lightgray;
 }
 
 .stories {
-    background-color: #FFFFFF;
-    width: 612px;
-    height: 118px;
-    margin-bottom: 24px;
-    display: flex;
-    overflow: hidden;
-    align-items: center;
-    border: 1px solid #DBDBDB;
-    border-radius: 3px;
-    position: relative;
+  background-color: #ffffff;
+  width: 612px;
+  height: 118px;
+  margin-bottom: 24px;
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+  border: 1px solid #dbdbdb;
+  border-radius: 3px;
+  position: relative;
 }
 
 .arrow {
-    position: absolute;
-    right: 8px;
-    border-radius: 9999px;
-    box-shadow: -3px 4px 4px #888888;
-    z-index: 2;
+  position: absolute;
+  right: 8px;
+  border-radius: 9999px;
+  box-shadow: -3px 4px 4px #888888;
+  z-index: 2;
 }
 
 .storiesAndName {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-left: 18px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 18px;
 }
 
 .stories-img {
-    border-radius: 9999px ;
-    width: 54px;
-    height: 54px;
+  border-radius: 9999px;
+  width: 54px;
+  height: 54px;
 }
 
-.stories-border-white{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    padding: 2px;
-    border-radius: 9999px;
+.stories-border-white {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  padding: 2px;
+  border-radius: 9999px;
 }
 
 .stories-border-colorful {
-    background: linear-gradient(45deg, rgb(255, 230, 0), rgb(255, 0, 128)80%);
-    padding: 2px;
-    border-radius: 9999px;
+  background: linear-gradient(45deg, rgb(255, 230, 0), rgb(255, 0, 128) 80%);
+  padding: 2px;
+  border-radius: 9999px;
 }
 
 .storiesName {
-    font-family: 'Roboto', sans-serif;
-    margin-top: 6px;
-    font-size: 12px;
-    font-weight: 400;
+  font-family: "Roboto", sans-serif;
+  margin-top: 6px;
+  font-size: 12px;
+  font-weight: 400;
 }
 
 .post {
-    background-color: white;
-    margin-bottom: 60px;
-    font-family: 'Roboto', sans-serif;
-    border: 1px solid #DBDBDB;
-    border-radius: 2px;
+  background-color: white;
+  margin-bottom: 60px;
+  font-family: "Roboto", sans-serif;
+  border: 1px solid #dbdbdb;
+  border-radius: 2px;
 }
 
 .postTop {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    height: 60px;
-    background-color: white;
-    font-size: 14px;
-    font-weight: 500
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 60px;
+  background-color: white;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .postTop-left {
-    display: flex;
-    align-items: center;
-    margin-left: 17px;
+  display: flex;
+  align-items: center;
+  margin-left: 17px;
 }
 
 .post-img {
-    width: 610px;
-    height: 612px;  
+  width: 610px;
+  height: 612px;
+  cursor: pointer;
 }
 
 .postBottom {
-    height: 110px;
-    margin-top: 13px;
+  height: 110px;
+  margin-top: 13px;
 }
 
 .iconsPost {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .postTop img {
-    width: 32px;
-    height: 32px;
+  width: 32px;
+  height: 32px;
 }
 
 .profile-name-post {
-    margin-left: 15px;
+  margin-left: 15px;
 }
 
 .postTop-rigth {
-    margin-right: 17px;
+  margin-right: 17px;
 }
 
-
 .postBottom-left {
-    margin-left: 18px;
-    width: 88px;
-    display: flex;
-    justify-content: space-between;
+  margin-left: 18px;
+  width: 88px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .postBottom-rigth {
-    margin-right: 18px;
+  margin-right: 18px;
 }
 
 .likes img {
-    width: 20px;
-    height: 20px;
-    margin-right: 5px;
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
 }
 
 .likes {
-    margin-left: 17px;
-    margin-top: 13px;
-    display: flex;
-    align-items: center;
+  margin-left: 17px;
+  margin-top: 13px;
+  display: flex;
+  align-items: center;
 }
 
-input[type=text] {
-    background-color: #FAFAFA;
-    width: 215px;
-    height: 28px;
-    border: #DBDBDB solid 1px;
-    border-radius: 3px;
-    font-family: 'Roboto', sans-serif;
-    padding-left: 5px;
-    font-weight: 400;
-    font-size: 12px;
-    outline: none;
+.color-red {
+  color: rgba(255, 0, 0, 0.8);
+}
+
+.color-red:hover,
+.color-red:focus {
+  color: rgba(255, 0, 0, 0.4);
+}
+
+input[type="text"] {
+  background-color: #fafafa;
+  width: 215px;
+  height: 28px;
+  border: #dbdbdb solid 1px;
+  border-radius: 3px;
+  font-family: "Roboto", sans-serif;
+  padding-left: 5px;
+  font-weight: 400;
+  font-size: 12px;
+  outline: none;
 }
 
 input[type="text"]::placeholder {
-    padding-left: 75px;
-  }
+  padding-left: 75px;
+}
 
 .sidebarTop {
-    height: 102px;
+  height: 102px;
 
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .sidebarTop img {
-    width: 56px;
-    height: 56px;
+  width: 56px;
+  height: 56px;
+  cursor: pointer;
+  border-radius: 9999px;
 }
 
 .sidebarTop-p1 {
-    margin-left: 17px;
-   
-    font-size: 14px;
-    font-weight: 500;
-}
+  margin-left: 17px;
 
-.sidebarTop-p2 {
-    margin-left: 17px;
-    
-    font-size: 14px;
-    color: #8E8E8E;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .suggestion {
-    height: 15px;
+  height: 15px;
 
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 12px;
-    font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 12px;
+  font-weight: 500;
 }
 
 .suggestion1 {
-    color: #8E8E8E;
+  color: #8e8e8e;
 }
 
 .suggestion2 {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .sidebarMid {
-    height: 274px;
-
+  height: 274px;
 }
 
 .follow1 {
-    height: 35px;
-    margin-top: 15px;
-    display: flex;
-    align-items: center;
-    width: 257px;
+  height: 35px;
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+  width: 257px;
 }
 
 .sidebarMid-text1 {
-    font-size: 14px;
-    font-weight: 500;
-    margin-left: 11px;
-    margin-bottom: 6px;
+  font-size: 14px;
+  font-weight: 500;
+  margin-left: 11px;
+  margin-bottom: 6px;
 }
 
 .sidebarMid-text2 {
-    font-size: 12px;
-    font-weight: 400;
-    color: #8E8E8E;
-    margin-left: 11px;
+  font-size: 12px;
+  font-weight: 400;
+  color: #8e8e8e;
+  margin-left: 11px;
 }
 
 .follow-blue {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    font-size: 12px;
-    font-weight: 700;
-    color: #139EF2;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 12px;
+  font-weight: 700;
+  color: #139ef2;
 }
 
 .follow {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .aboutUs {
-    font-weight: 400;
-    font-size: 11px;
-    color: #C7C7C7;
-    margin-bottom: 18px;
+  font-weight: 400;
+  font-size: 11px;
+  color: #c7c7c7;
+  margin-bottom: 18px;
 }
 
 .instagram2022 {
-    font-weight: 400;
-    font-size: 11px;
-    color: #C7C7C7;
+  font-weight: 400;
+  font-size: 11px;
+  color: #c7c7c7;
 }
 
 .comment-text {
-    display: flex;
+  display: flex;
 }
 
 .comment2 {
-    margin-left: 5px;
-} 
+  margin-left: 5px;
+}
 
 .comment {
-    margin: 6px 20px ;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+  margin: 6px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  .comment ion-icon {
-    font-size: 16px;
-  }
+.comment ion-icon {
+  font-size: 16px;
+}
 
 .send-comment {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  border-top: 1px solid #dbdbdb;
+  width: 100%;
+  padding-right: 14px;
+  padding-left: 14px;
+}
+.send-comment input {
+  width: 100%;
+  height: 100%;
+  margin: 0 10px;
+  padding-left: 10px;
+  border: none;
+  outline: none;
+}
+
+.send-comment p {
+  font-size: 16px;
+  color: #b2dffc;
+  font-weight: 700;
+  transition: 0.2s;
+}
+.send-comment p:hover {
+  color: #139ef2;
+}
+.send-comment ion-icon {
+  width: 30px;
+  height: 30px;
+}
+
+@media (max-width: 935px) {
+  .container {
+    justify-content: center;
+  }
+  .sidebar {
+    display: none;
+  }
+}
+
+@media (max-width: 614px) {
+  .allmenu {
+    display: none;
+  }
+
+  .stories {
+    background-color: #ececec;
+    margin-bottom: 0;
+  }
+
+  .arrow {
+    display: none;
+  }
+
+  .menu-mobile {
     display: flex;
+    height: 54px;
+    width: 100%;
+    background-color: #ffffff;
     align-items: center;
-    height: 50px;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    padding: 0 20px;
+    border-bottom: 1px solid #dbdbdb;
+  }
+
+  .menu-mobile-bottom {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 3;
+    background-color: #ffffff;
+    height: 54px;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
     border-top: 1px solid #dbdbdb;
-    width: 100%;
-    padding-right: 14px;
-    padding-left: 14px;
-  }
-  .send-comment input {
-    width: 100%;
-    height: 100%;
-    margin: 0 10px;
-    padding-left: 10px;
-    border: none;
-    outline: none;
   }
 
-  .send-comment p { 
-    font-size: 16px;
-    color: #b2dffc;
-    font-weight: 700;
-    transition: 0.2s;
-  }
-  .send-comment p:hover {
-    color: #139EF2;
-  }
-  .send-comment ion-icon {
-    width: 30px;
-    height: 30px;
+  .center {
+    margin-top: 54px;
   }
 
-  @media (max-width: 935px) {
-    .container {
-      justify-content: center;
-    }
-    .sidebar {
-      display: none;
-    }
+  .spacer {
+    display: none;
   }
 
-  @media (max-width: 614px) {
-
-    .allmenu {
-        display: none;
-    }
-
-    .stories {
-        background-color: #ececec;
-        margin-bottom: 0;
-    }
-
-    .arrow {
-        display: none;
-    }
-
-    .menu-mobile {
-        display: flex;
-        height: 54px;
-        width: 100%;
-        background-color: #FFFFFF;
-        align-items: center;
-        justify-content: space-between;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 3;
-        padding: 0 20px;
-        border-bottom: 1px solid #DBDBDB;
-    }
-
-    .menu-mobile-bottom {
-        display: flex;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        z-index: 3;
-        background-color: #FFFFFF;
-        height: 54px;
-        width: 100%;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0 20px;
-        border-top: 1px solid #DBDBDB;
-    }
-    
-    .center {
-        margin-top: 54px;
-    }
-
-    .spacer {
-        display: none;
-    }
-
-    .logo-text {
-        display: none;
-    }
-
-    .compass {
-        display: none;
-    }
-
-    .heart {
-        display: none;
-    }
-
-    .person {
-        display: none;
-    }
-
-    .menu-itens {
-      width: 20px;
-      margin-right: 20px;
-    }
- 
-    .logo {
-        margin-left: 20px;
-        width: 20px;
-    }
-
-    input[text] {
-        display: none;
-    }
-
-    .logo-mobile {
-        display: inherit;
-    }
+  .logo-text {
+    display: none;
   }
+
+  .compass {
+    display: none;
+  }
+
+  .heart {
+    display: none;
+  }
+
+  .person {
+    display: none;
+  }
+
+  .menu-itens {
+    width: 20px;
+    margin-right: 20px;
+  }
+
+  .logo {
+    margin-left: 20px;
+    width: 20px;
+  }
+
+  input[text] {
+    display: none;
+  }
+
+  .logo-mobile {
+    display: inherit;
+  }
+}
